# opentrep

./: .gitignore  .travis-ciwheel.yml  .travis-direct.yml  .travis-kind.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  NEWS  Pipfile  README  README.md  TODO  autogen.sh  build.py.new  build.py.orig  configure.ac  opentrep-centos7.patch  opentrep-config-python.cmake.in  opentrep-config.cmake.in  opentrep-config.in  opentrep.m4.in  opentrep.pc.in  opentrep.spec  opentrep.spec.in  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  status.js  test_trep_e2e_simple.py  tox.ini
data/: CMakeLists.txt
data/por/: README.md  create_ori_por_public_schema.sql  create_trep_tables_mysql.sql  create_trep_tables_sqlite3.sql  create_trep_user_and_db.sql  opentrep_create_db_user.sh.in  optd_por_public_4_test.csv  ori_por_public.csv.bz2  ori_por_public_4_test.csv  test_optd_por_public.csv  test_optd_por_public_schema.sql  test_ori_por_public.csv  test_ori_por_public_schema.sql
db/: CMakeLists.txt
db/admin/: clean_all_tables.sh.in  count_all_tables.sh.in  create_geo_db.sh.in  create_geo_user.sh.in  create_trep_db.sh.in  create_trep_user.sh.in  drop_trep_tables.sh.in  dump_geo_db_structure.sh.in  dump_trep_db_structure.sh.in  execSQL.sh.in  export_ref_data.sh.in  getClosestAirports.sh.in  load_geo_db.sh.in  load_trep_data.sh.in
db/data/: create_table_airport_popularity.sql  create_table_places.sql  create_trep_db.sql  create_trep_indexes.sql  create_trep_tables.sql  create_trep_user.sql  export_place_details.sql  export_place_names.sql  trep_airport_pageranked.csv  trep_place_details.csv  trep_place_names.csv
extracppunit/: CppUnitCore.cpp  CppUnitCore.hpp  Makefile.am  Makefile.common  XmlOutputterHookForCC.cpp  XmlOutputterHookForCC.hpp  sources.mk
gui/: Makefile.am
gui/icons/: Makefile.am  opentrep.xcf  sources.mk
gui/legacy/: Dockerfile  README.md  bashrc
gui/psp/: .gitignore  Makefile.am  index.html  libpyopentrep_proxy.py  localize.py  log_service.py  opentrep.psp  result_parser.py  sources.mk
gui/reactive/: Dockerfile  README.md  bashrc  my.cnf
opentrep/: CMakeLists.txt  CityDetails.hpp  CityDetailsList.hpp  DBParams.hpp  DBType.hpp  DistanceErrorRule.hpp  IATAType.hpp  Language.hpp  Location.hpp  LocationKey.hpp  LocationList.hpp  Makefile.am  NameMatrix.hpp  Names.hpp  OPENTREP_Abstract.hpp  OPENTREP_ParserHelperTypes.hpp  OPENTREP_Service.hpp  OPENTREP_Types.hpp  OPENTREP_exceptions.hpp  OPENTREP_log.hpp  OutputFormat.hpp  sources.mk
opentrep/basic/: BasChronometer.cpp  BasChronometer.hpp  BasConst.cpp  BasConst_General.hpp  BasConst_OPENTREP_Service.hpp  BasConst_Unicode.hpp  BasFileMgr.cpp  BasFileMgr.hpp  BasParserTypes.hpp  CityDetails.cpp  DBType.cpp  Location.cpp  LocationKey.cpp  Makefile.am  NameMatrix.cpp  Names.cpp  OTransliterator.cpp  OTransliterator.hpp  OutputFormat.cpp  ScoreType.cpp  ScoreType.hpp  StructAbstract.hpp  UTF8Handler.cpp  UTF8Handler.hpp  Utilities.cpp  Utilities.hpp  float_utils.hpp  float_utils_google.hpp  icu_util.cpp  icu_util.hpp  sources.mk
opentrep/batches/: Makefile.am  indexer.cpp  opentrep-dbmgr.cfg  opentrep-dbmgr.cpp  opentrep-indexer.cfg  opentrep-indexer.cpp  opentrep-searcher.cfg  opentrep-searcher.cpp  opentrep_indexer.cfg  opentrep_searcher.cfg  searcher.cpp  sources.mk
opentrep/bom/: BomAbstract.cpp  BomAbstract.hpp  BomJSONExport.cpp  BomJSONExport.hpp  BomType.cpp  BomType.hpp  Document.cpp  Document.hpp  DocumentList.hpp  Filter.cpp  Filter.hpp  GenericBom.hpp  IATAType.cpp  KeyAbstract.hpp  Language.cpp  Language.hpp  Levenshtein.cpp  Levenshtein.hpp  LocationExchange.cpp  LocationExchange.hpp  Makefile.am  MatchingDocuments.cpp  MatchingDocuments.hpp  NameMatrix.cpp  NameMatrix.hpp  Names.cpp  Names.hpp  PORFileHelper.cpp  PORFileHelper.hpp  PORParserHelper.cpp  PORParserHelper.hpp  PRParserHelper.cpp  Place.cpp  Place.hpp  PlaceHolder.cpp  PlaceHolder.hpp  PlaceKey.cpp  PlaceKey.hpp  PlaceList.hpp  QuerySlices.cpp  (+28 more)
opentrep/command/: DBManager.cpp  DBManager.hpp  DBSessionManager.cpp  DBSessionManager.hpp  FileManager.cpp  FileManager.hpp  IndexBuilder.cpp  IndexBuilder.hpp  Makefile.am  PORParser.cpp  PORParser.hpp  PORParserHelper.cpp  PORParserHelper.hpp  PRParser.cpp  PRParser.hpp  PRParserHelper.cpp  PRParserHelper.hpp  RequestInterpreter.cpp  RequestInterpreter.hpp  SociSessionManager.cpp  SociSessionManager.hpp  XapianIndexManager.cpp  XapianIndexManager.hpp  sources.mk
opentrep/config/: opentrep-paths.hpp.in
opentrep/core/: Makefile.am  sources.mk
opentrep/dbadaptor/: DbaAbstract.cpp  DbaAbstract.hpp  DbaPlace.cpp  DbaPlace.hpp  Makefile.am  sources.mk
opentrep/factory/: FacBomAbstract.cpp  FacBomAbstract.hpp  FacOpenTrepServiceContext.cpp  FacOpenTrepServiceContext.hpp  FacPlace.cpp  FacPlace.hpp  FacPlaceHolder.cpp  FacPlaceHolder.hpp  FacResult.cpp  FacResult.hpp  FacResultCombination.cpp  FacResultCombination.hpp  FacResultHolder.cpp  FacResultHolder.hpp  FacServiceAbstract.cpp  FacServiceAbstract.hpp  FacSupervisor.cpp  FacSupervisor.hpp  FacWorld.cpp  FacWorld.hpp  FacXapianDB.cpp  FacXapianDB.hpp  Makefile.am  sources.mk
opentrep/protobuf/: Travel.cpp  Travel.hpp
opentrep/python/: MANIFEST.in  Makefile.am  __init__.py  pyopentrep.cpp  pyopentrep.in  pyopentrep.py  pyopentrep.py.in  setup.py  sources.mk
opentrep/service/: Logger.cpp  Logger.hpp  Makefile.am  OPENTREP_Service.cpp  OPENTREP_ServiceContext.cpp  OPENTREP_ServiceContext.hpp  ServiceAbstract.cpp  ServiceAbstract.hpp  ServiceUtilities.cpp  ServiceUtilities.hpp  sources.mk
ternary_tree/: Makefile.am  README  examples.cpp  fill_dictionary.hpp  full-docs-index.html  index.html  iterator_compile_test.cpp  iterator_wrapper.hpp  readme.txt  simple_tst.cpp  sources.mk  structured_map.hpp  structured_set.hpp  ternary_tree.hpp  tst.doxy  tst_concept_checks.cpp  tst_public.doxy
ternary_tree/doxygen_input/: blather.hpp  concepts.txt  doxygen-old.css  doxygen.css  featuretable.html  (+5 more)
test/: IndexBuildingTestSuite.cpp  IndexBuildingTestSuite.hpp  Makefile.am  testIndexer.sh  testSearcher.sh
(+426 files in other folders)
