## opentrep/basic sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libopentrepbas.la

libopentrepbas_la_SOURCES = $(bas_h_sources) $(bas_cc_sources) 
libopentrepbas_la_CXXFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/basic
#pkginclude_HEADERS = $(bas_h_sources)
